--- a/UDP Server - C++/CMakeLists.txt
+++ b/UDP Server - C++/CMakeLists.txt
@@ -12,8 +12,9 @@ include_directories(include)
 include_directories(tests/googletest/include)
 
 add_executable(udp_listener src/main.cpp src/Logger.hpp src/Listener.hpp src/MyLogger.cpp src/MyLogger.hpp libs/Network.cpp libs/Network.h libs/CRC.cpp libs/CRC.h src/MyListener.cpp src/MyListener.hpp src/MyServer.cpp src/MyServer.hpp)
-add_executable(my_tests tests/test_MyLogger.cpp src/Listener.hpp src/MyLogger.cpp src/MyLogger.hpp)
-#add_executable(my_tests tests/test_MyListener.cpp src/Listener.hpp src/MyListener.cpp src/MyListener.hpp)
+
+#add_executable(my_tests tests/test_MyLogger.cpp src/Listener.hpp src/MyLogger.cpp src/MyLogger.hpp)
+add_executable(my_tests tests/test_MyListener.cpp src/Logger.hpp src/Listener.hpp src/MyLogger.cpp src/MyLogger.hpp libs/Network.cpp libs/Network.h libs/CRC.cpp libs/CRC.h src/MyListener.cpp src/MyListener.hpp src/MyServer.cpp src/MyServer.hpp)
 
 target_link_libraries(my_tests PRIVATE gtest gmock)
 
