Refactoring Class Names

--- a/udpServer_cpp/CMakeLists.txt
+++ b/udpServer_cpp/CMakeLists.txt
@@ -11,15 +11,18 @@ add_subdirectory(tests/googletest)
 include_directories(include)
 include_directories(tests/googletest/include)
 
-set (SOURCES src/CsvLogger.cpp libs/Network.cpp libs/CRC.cpp src/DscListener.cpp src/MyServer.cpp)
-set (HEADERS src/Logger.hpp src/Listener.hpp src/CsvLogger.hpp libs/Network.h libs/CRC.h src/DscListener.hpp src/MyServer.hpp)
+set (SOURCES src/CsvLogger.cpp libs/Network.cpp libs/CRC.cpp src/DscListener.cpp src/UdpServer.cpp)
+set (HEADERS src/Logger.hpp src/Listener.hpp src/CsvLogger.hpp libs/Network.h libs/CRC.h src/DscListener.hpp src/UdpServer.hpp)
 
 add_executable(udp_listener ${SOURCES} ${HEADERS} src/main.cpp)
-#add_executable(tests_myLogger ${SOURCES} ${HEADERS} tests/test_MyLogger.cpp)
-add_executable(tests_myListener ${SOURCES} ${HEADERS} tests/test_MyListener.cpp)
 
-#target_link_libraries(tests_myLogger PRIVATE gtest gmock)
-target_link_libraries(tests_myListener PRIVATE gtest gmock)
+add_executable(tests_CsvLogger ${SOURCES} ${HEADERS} tests/test_CsvLogger.cpp)
+#add_executable(tests_DscListener ${SOURCES} ${HEADERS} tests/test_DscListener.cpp)
+#add_executable(tests_myLogger tests/test_MyLogger.cpp src/Listener.hpp src/MyLogger.cpp src/MyLogger.hpp)
+#add_executable(tests_myListener tests/test_MyListener.cpp src/Logger.hpp src/Listener.hpp src/MyLogger.cpp src/MyLogger.hpp libs/Network.cpp libs/Network.h libs/CRC.cpp libs/CRC.h src/MyListener.cpp src/MyListener.hpp src/MyServer.cpp src/MyServer.hpp)
+
+target_link_libraries(tests_CsvLogger PRIVATE gtest gmock)
+#target_link_libraries(tests_DscListener PRIVATE gtest gmock)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
