--- a/udpServer_cpp/tests/CMakeLists.txt
+++ b/udpServer_cpp/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(include)
 include_directories(tests/googletest/include)
 
 add_executable(tests_CsvLogger test_CsvLogger.cpp ../src/CsvLogger.cpp ../src/CsvLogger.hpp)
-add_executable(tests_DscListener test_DscListener.cpp mock.hpp ../src/DscListener.cpp ../src/DscListener.hpp ../src/CsvLogger.cpp ../src/CsvLogger.hpp ../libs/CRC.cpp ../libs/CRC.h)
+add_executable(tests_DscListener test_DscListener.cpp mock.hpp ../src/DscListener.cpp ../src/DscListener.hpp ../src/CsvLogger.cpp ../src/CsvLogger.hpp ../libs/CRC.cpp ../libs/CRC.h ../src/setup.hpp)
 
 target_link_libraries(tests_CsvLogger PRIVATE gtest gmock)
 target_link_libraries(tests_DscListener PRIVATE gtest gmock)
