--- a/udpServer_cpp/src/CMakeLists.txt
+++ b/udpServer_cpp/src/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 include_directories(include)
 
 set (SOURCES CsvLogger.cpp ../libs/Network.cpp ../libs/CRC.cpp DscListener.cpp UdpServer.cpp)
-set (HEADERS Logger.hpp Listener.hpp CsvLogger.hpp ../libs/Network.h ../libs/CRC.h DscListener.hpp UdpServer.hpp)
+set (HEADERS Logger.hpp Listener.hpp CsvLogger.hpp ../libs/Network.h ../libs/CRC.h DscListener.hpp UdpServer.hpp setup.hpp)
 
 add_executable(udp_listener ${SOURCES} ${HEADERS} main.cpp)
 
